crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__ambiguous_angle_brackets_expression.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "parse_expr(\"a < b > c\")"
---
Binary ">"
  Binary "<"
    a
    b
  c
