crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__angle_bracket_close_is_not_a_comparison.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "parse_type(\"wrap<1 + 2>\")"
---
ChevronSuffix
  TypeName "wrap"
  Binary "+"
    1
    2
