crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__array_type.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "parse_type(\"int[3]\")"
---
Array
  TypeName "int"
  3
