crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__assignment_is_right_associative.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"a = b = c;\", Parser::parse_statement)"
---
ExprStmt
  Assign "="
    a
    Assign "="
      b
      c
