crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__break_and_continue.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"loop { break; continue; }\", Parser::parse_statement)"
---
LoopStmt
  Block
    BreakStmt
    ContinueStmt
