crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__call_with_args.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"foo(1, 2 + 3)\", Parser::parse_expr)"
---
Call
  foo
  1
  Binary "+"
    2
    3
