crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__call_with_no_args.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"advance()\", Parser::parse_expr)"
---
Call
  advance
