crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__const_array_type.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"const int[]\", Parser::parse_type)"
---
ConstType
  Array
    TypeName "int"
