crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__const_var_decl_statement.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"const int x = 1;\", Parser::parse_statement)"
---
VarDeclStmt "x"
  ConstType
    TypeName "int"
  1
