crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__function.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "parse_stmt(\"int add(int a, int b) { return a + b; }\")"
---
FunctionDecl "add"
  TypeName "int"
  Param "a"
    TypeName "int"
  Param "b"
    TypeName "int"
  Block
    ReturnStmt
      Binary "+"
        a
        b
