crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__function_with_const_params.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"void f(const int& a, const float32[10]& b) { }\",\nParser::parse_statement)"
---
FunctionDecl "f"
  TypeName "void"
  Param &"a"
    ConstType
      TypeName "int"
  Param &"b"
    ConstType
      Array
        TypeName "float32"
        10
  Block
